Add Mastodon && Remove Twitter

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="container" class="animated bounceInDown">
     <h1 class="title">Aris Papathéodorou</h1> <!-- Change page title -->
     <ul id="social-links">
-      <li><a class="twitter" href="https://twitter.com/_a_r_i_s">Twitter</a></li>
+      <li><a class="twitter" href="https://mamot.fr/@aris">Mastodon</a></li>
       <li><a class="github" href="https://github.com/bugsysop">Github</a></li>
       <!-- <li><a class="codepen" href="http://example.com">Codepen</a></li> -->
       <!-- <li><a class="mail" href="mailto:mail@example.com">Email</a></li> -->
