--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <h1 class="title">Aris Papathéodorou</h1> <!-- Change page title -->
     <ul id="social-links">
       <li><a class="twitter" href="https://mamot.fr/@aris">Mastodon</a></li>
+      <li><a class="codepen" href="https://seenthis.net/people/aris">Seenthis</a></li>
       <li><a class="github" href="https://github.com/bugsysop">Github</a></li>
       <!-- <li><a class="codepen" href="http://example.com">Codepen</a></li> -->
       <!-- <li><a class="mail" href="mailto:mail@example.com">Email</a></li> -->
