--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,700|Lekton' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css">
+  <link rel="stylesheet" type="text/css" href="_assets/animate.min.css">
 
 </head>
 
