Cleaning code in index.html

--- a/index.html
+++ b/index.html
@@ -5,29 +5,22 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Aris Papathéodorou</title> <!-- Change page title -->
-  <meta name="description" content="">
+  <meta name="description" content="Aris Papathéodorou">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,700|Lekton' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="_assets/style.css">
   <link rel="stylesheet" type="text/css" href="_assets/animate.min.css">
-
 </head>
 
 <body>
-
-
   <div id="container" class="animated bounceInDown">
     <h1 class="title">Aris Papathéodorou</h1> <!-- Change page title -->
     <ul id="social-links">
       <li><a class="twitter" href="https://mamot.fr/@aris">Mastodon</a></li>
       <li><a class="codepen" href="https://seenthis.net/people/aris">Seenthis</a></li>
       <li><a class="github" href="https://framagit.org/aris">Framagit</a></li>
-      <!-- <li><a class="codepen" href="http://example.com">Codepen</a></li> -->
-      <!-- <li><a class="mail" href="mailto:mail@example.com">Email</a></li> -->
     </ul>
   </div>
-
 </body>
 
 </html>
