MàJ animate.css et organisation assets

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Aris Papathéodorou</title>
   <meta name="description" content="Aris Papathéodorou">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href='https://fonts.googleapis.com/css?family=Raleway:400,700|Lekton' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="_assets/style.css">
-  <link rel="stylesheet" type="text/css" href="_assets/animate.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="_assets/styles/main.css">
+  <link rel="stylesheet" type="text/css" href="_assets/styles/animate.min.css">
 </head>
 <body>
   <div id="container" class="animated bounceInDown">
